<resources>
    <string name="app_name">CalcPrecoWS</string>
    <string name="action_settings">Settings</string>
    <string name="lblCepOrigem">CEP de Origem: </string>
    <string name="lblCepDestino">CEP de Destino: </string>
    <string name="lblTipoServico">Tipo de Serviço: </string>
    <string name="btnCalcular">Calcular </string>
    <string name="lblPrazo">Prazo: </string>
    <string name="lblEntregaSabado">Entrega aos Sábados?: </string>
    <string name="btnE">Calcular </string>
    <string name="lblPeso">Peso(em Kg)</string>
    <string name="lblTipoServicoPopUp">Escolha o serviço</string>

    <string name="lblValorSemAdicionais">ValorSemAdicionais</string>

    <string name="Valor">Valor</string>
    <string name="PrazoEntrega">Prazo Entrega</string>
    <string name="ValorMaoPropria">Valor Mão de Obra Própria</string>
    <string name="ValorAvisoRecebimento">Valor Aviso Recebimento</string>
    <string name="ValorDeclarado">Valor Declarado</string>
    <string name="EntregaDomiciliar">Entrega Domiciliar</string>
    <string name="ValorSemAdicionais">Valor Sem Adicionais</string>
    <string name="obsFim">Obs Final</string>
    <string name="DataMaxEntrega">Data Máxima de Entrega</string>
    <string name="HoraMaxEntrega">Horaa Máxima Entrega</string>


    <!-- Para alimentar a caixa de seleção -->


    <string-array name="arrTipoServicos">
        <item>FAC SIMPLES LOCAL</item>
        <item>FAC SIMPLES ESTADUAL</item>
        <item>FAC SIMPLES NACIONAL</item>
        <item>FAC REGISTRADO LOCAL</item>
        <item>FAC REGISTRADO ESTADUAL</item>
        <item>FAC REGISTRADO NACIONAL</item>
        <item>FAC REGISTRADO LOCAL COM AR</item>
        <item>FAC REGISTRADO ESTADUAL COM AR</item>
        <item>FAC REGISTRADO NACIONAL COM AR</item>
        <item>FAC SIMPLES LOCAL ACIMA 500 G</item>
        <item>FAC SIMPLES ESTAD ACIMA 500 G</item>
        <item>FAC SIMPLES NAC ACIMA 500 G</item>
        <item>FAC REGIST LOCAL ACIMA 500 G</item>
        <item>FAC REGISTRADO EST ACIMA 500 G</item>
        <item>FAC REGISTRADO NAC ACIMA 500 G</item>
        <item>FAC REG LOCAL C/ AR ACIMA 500G</item>
        <item>FAC REG EST C/ AR ACIMA 500 G</item>
        <item>FAC REG NAC C/ AR ACIMA 500 G</item>


    </string-array>


</resources>
