<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wpos.com.br.calcprecows.MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPeso"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/txtPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="9"></EditText>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTipoServico"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/spiTipoServico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/arrTipoServicos"
            android:prompt="@string/lblTipoServicoPopUp"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCalcular"
            android:onClick="calcularValor" />
    </LinearLayout>
    <!-- Rótulos para Exibição das Informações Recuperadas dos Correios -->

    <LinearLayout
        android:id="@+id/linhaMensagem"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtMensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="@color/ErrorMesage" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linhaValor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Valor"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" />
    </LinearLayout>

</LinearLayout>



